force-app/main/default/objects/R360_Delivery_Membership__c/R360_Delivery_Membership__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Effective-dated resource membership in an account portfolio and sub-portfolio.</description><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><externalSharingModel>ControlledByParent</externalSharingModel><label>Delivery Membership</label><nameField><displayFormat>DM-{00000}</displayFormat><label>Membership Number</label><type>AutoNumber</type></nameField><pluralLabel>Delivery Memberships</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility></CustomObject>