force-app/main/default/objects/R360_Delivery_Membership__c/fields/Account__c.field-meta.xml
<CustomField><fullName>Account__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>Account</label><referenceTo>Account</referenceTo><relationshipLabel>Delivery Memberships</relationshipLabel><relationshipName>Resource360_Delivery_Memberships</relationshipName><required>true</required><type>Lookup</type></CustomField>