force-app/main/default/objects/R360_Delivery_Membership__c/fields/Allocated_Daily_Hours__c.field-meta.xml
<CustomField><fullName>Allocated_Daily_Hours__c</fullName><defaultValue>0</defaultValue><label>Allocated Daily Hours</label><precision>5</precision><scale>2</scale><trackHistory>true</trackHistory><type>Number</type></CustomField>