force-app/main/default/objects/R360_Delivery_Membership__c/fields/Available_Percent__c.field-meta.xml
<CustomField><fullName>Available_Percent__c</fullName><defaultValue>100</defaultValue><label>Available Capacity Percent</label><precision>5</precision><scale>2</scale><trackHistory>true</trackHistory><type>Percent</type></CustomField>