force-app/main/default/objects/R360_Delivery_Membership__c/fields/Capacity_As_Of__c.field-meta.xml
<CustomField><fullName>Capacity_As_Of__c</fullName><label>Capacity As Of</label><trackHistory>true</trackHistory><type>Date</type></CustomField>