force-app/main/default/objects/R360_Delivery_Membership__c/fields/Capacity_Percent__c.field-meta.xml
<CustomField><fullName>Capacity_Percent__c</fullName><defaultValue>100</defaultValue><label>Membership Capacity %</label><precision>5</precision><scale>2</scale><type>Percent</type></CustomField>