force-app/main/default/objects/R360_Delivery_Membership__c/fields/Delivery_Role__c.field-meta.xml
<CustomField><fullName>Delivery_Role__c</fullName><label>Delivery Role</label><length>100</length><required>true</required><type>Text</type></CustomField>