force-app/main/default/objects/R360_Delivery_Membership__c/fields/Membership_ID__c.field-meta.xml
<CustomField><fullName>Membership_ID__c</fullName><caseSensitive>false</caseSensitive><externalId>true</externalId><label>Membership ID</label><length>60</length><required>true</required><type>Text</type><unique>true</unique></CustomField>