force-app/main/default/objects/R360_Delivery_Membership__c/fields/Portfolio__c.field-meta.xml
<CustomField><fullName>Portfolio__c</fullName><label>Portfolio</label><referenceTo>R360_Portfolio__c</referenceTo><relationshipLabel>Delivery Memberships</relationshipLabel><relationshipName>Delivery_Memberships</relationshipName><relationshipOrder>0</relationshipOrder><reparentableMasterDetail>true</reparentableMasterDetail><type>MasterDetail</type><writeRequiresMasterRead>false</writeRequiresMasterRead></CustomField>