force-app/main/default/objects/R360_Delivery_Membership__c/fields/Primary__c.field-meta.xml
<CustomField><fullName>Primary__c</fullName><defaultValue>false</defaultValue><label>Primary Membership</label><type>Checkbox</type></CustomField>