force-app/main/default/objects/R360_Delivery_Membership__c/fields/Resource__c.field-meta.xml
<CustomField><fullName>Resource__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>Resource</label><referenceTo>Resource__c</referenceTo><relationshipLabel>Delivery Memberships</relationshipLabel><relationshipName>Delivery_Memberships</relationshipName><required>true</required><type>Lookup</type></CustomField>