force-app/main/default/objects/R360_Delivery_Membership__c/fields/Sub_Portfolio__c.field-meta.xml
<CustomField><fullName>Sub_Portfolio__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>Sub-portfolio</label><referenceTo>R360_Sub_Portfolio__c</referenceTo><relationshipLabel>Delivery Memberships</relationshipLabel><relationshipName>Delivery_Memberships</relationshipName><required>true</required><type>Lookup</type></CustomField>