force-app/main/default/objects/R360_Delivery_Membership__c/validationRules/Membership_Dates_And_Capacity.validationRule-meta.xml
<ValidationRule><fullName>Membership_Dates_And_Capacity</fullName><active>true</active><errorConditionFormula>OR(Capacity_Percent__c &lt;= 0, Capacity_Percent__c &gt; 100, AND(NOT(ISBLANK(Effective_To__c)), Effective_To__c &lt; Effective_From__c))</errorConditionFormula><errorMessage>Membership capacity must be 0–100% and effective dates must be ordered.</errorMessage></ValidationRule>