force-app/main/default/objects/R360_Delivery_Membership__c/validationRules/Membership_Hierarchy_Consistent.validationRule-meta.xml
<ValidationRule><fullName>Membership_Hierarchy_Consistent</fullName><active>true</active><errorConditionFormula>OR(Sub_Portfolio__r.Portfolio__c &lt;&gt; Portfolio__c, Account__c &lt;&gt; Portfolio__r.Account__c)</errorConditionFormula><errorMessage>Membership account, portfolio and sub-portfolio must belong to the same hierarchy.</errorMessage></ValidationRule>