force-app/main/default/objects/R360_Delivery_Membership__c/listViews/Current_Delivery_Memberships.listView-meta.xml
<ListView><fullName>Current_Delivery_Memberships</fullName><columns>NAME</columns><columns>Membership_ID__c</columns><columns>Resource__c</columns><columns>Account__c</columns><columns>Sub_Portfolio__c</columns><columns>Delivery_Role__c</columns><columns>Capacity_Percent__c</columns><filterScope>Everything</filterScope><filters><field>Current__c</field><operation>equals</operation><value>1</value></filters><label>Current Delivery Memberships</label></ListView>